namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sa-p6
  labels:
    name: sa-p6
