ms-products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
      - name: products-service
        image: robinbuezo11/sa-p5-products:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: products-service
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
