ms-promotions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotions-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promotions-service
  template:
    metadata:
      labels:
        app: promotions-service
    spec:
      containers:
      - name: promotions-service
        image: robinbuezo11/sa-p5-promotions:latest
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: promotion-service
spec:
  selector:
    app: promotions-service
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
  type: ClusterIP
