ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /users-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-service
                port:
                  number: 3002
          - path: /products-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service
                port:
                  number: 5000
          - path: /promotions-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: promotion-service
                port:
                  number: 5001
